--- a/seminario/seminario.html
+++ b/seminario/seminario.html
@@ -332,16 +332,69 @@
 </section>
 <section id="introdução" class="slide level2">
 <h2>Introdução</h2>
+<h3 id="artigo">Artigo</h3>
+<p>Isabel Molina, Ayoub Saei, M. José Lombardía, Small Area Estimates of Labour Force Participation Under a Multinomial Logit Mixed Model. <a href="https://doi.org/10.1111/j.1467-985X.2007.00493.x">https://doi.org/10.1111/j.1467-985X.2007.00493.x</a></p>
+<h3 id="objetivo">Objetivo</h3>
+<p>Desenvolver uma nova metodologia para estimar características de desemprego ou emprego em áreas pequenas.</p>
 </section>
-<section id="artigos" class="slide level2">
-<h2>Artigos</h2>
-<ul>
-<li>Isabel Molina, Ayoub Saei, M. José Lombardía, Small Area Estimates of Labour Force Participation Under a Multinomial Logit Mixed Model, Journal of the Royal Statistical Society Series A: Statistics in Society, Volume 170, Issue 4, October 2007, Pages 975–1000, <a href="https://doi.org/10.1111/j.1467-985X.2007.00493.x">https://doi.org/10.1111/j.1467-985X.2007.00493.x</a></li>
-<li>Schielzeth, H, Dingemanse, NJ, Nakagawa, S, et al.&nbsp;Robustness of linear mixed-effects models to violations of distributional assumptions. Methods Ecol Evol. 2020; 11: 1141–1152. <a href="https://doi.org/10.1111/2041-210X.13434">https://doi.org/10.1111/2041-210X.13434</a></li>
-</ul>
+<section id="variáveis" class="slide level2">
+<h2>Variáveis</h2>
+<div style="font-size: 60%;">
+<table>
+<colgroup>
+<col style="width: 18%">
+<col style="width: 81%">
+</colgroup>
+<thead>
+<tr class="header">
+<th>Variable</th>
+<th>Descrição</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>AREA</td>
+<td>Autoridade unitária ou distrito de autoridade local: 1–406</td>
+</tr>
+<tr class="even">
+<td>SEXAGE</td>
+<td>Categorias de sexo e idade: 1–6 (idade, [16,25], (25,40] e &gt;40 anos; homens, 1, 2, 3; mulheres, 4, 5, 6)</td>
+</tr>
+<tr class="odd">
+<td>GOR</td>
+<td>Região do escritório governamental: 1–12</td>
+</tr>
+<tr class="even">
+<td>CLUSTER</td>
+<td>Classificação socioeconômica: 1–7 (1, áreas rurais; 2, periferia urbana; 3, costa e serviços; 4, Inglaterra próspera; 5, mineração, manufatura e indústria; 6, centros educacionais e exterior de Londres; 7, interior de Londres)</td>
+</tr>
+<tr class="odd">
+<td>SAMP.UNEMPLOYED</td>
+<td>Total de indivíduos desempregados na amostra no grupo AREA–SEXAGE</td>
+</tr>
+<tr class="even">
+<td>SAMP.EMPLOYED</td>
+<td>Total de indivíduos empregados na amostra no grupo AREA–SEXAGE</td>
+</tr>
+<tr class="odd">
+<td>SAMP.INACTIVE</td>
+<td>Total de indivíduos inativos na amostra no grupo AREA–SEXAGE</td>
+</tr>
+<tr class="even">
+<td>REG.UNEMPLOYED</td>
+<td>Total de indivíduos registrados em um escritório de desemprego no grupo AREA–SEXAGE</td>
+</tr>
+<tr class="odd">
+<td>TOTAL</td>
+<td>Número total de indivíduos no grupo AREA–SEXAGE</td>
+</tr>
+</tbody>
+</table>
+</div>
 </section>
 <section id="diagnóstico-de-modelos-mistos" class="slide level2">
 <h2>Diagnóstico de modelos mistos</h2>
+<p>Diagnóstico</p>
 </section>
 <section id="análise-de-resíduos" class="slide level2">
 <h2>Análise de resíduos</h2>
