--- a/seminario/seminario.html
+++ b/seminario/seminario.html
@@ -392,6 +392,33 @@
 </table>
 </div>
 </section>
+<section id="modelo" class="slide level2">
+<h2>Modelo</h2>
+<p>Modelo logit multinomial com efeitos aleatórios de <em>área</em>.</p>
+<p><span class="math display">\[
+f(y_{di1}, y_{di2} \mid u_d) = \frac{m_{di}!}{y_{di1}! \cdot y_{di2}! \cdot y_{di3}!} \cdot p_{di1}^{y_{di1}} \cdot p_{di2}^{y_{di2}} \cdot p_{di3}^{y_{di3}}
+\]</span></p>
+<div style="font-size: 60%;">
+<ul>
+<li><span class="math inline">\(x_{di}\)</span>, <span class="math inline">\(y_{di1}\)</span>, <span class="math inline">\(y_{di2}\)</span> e <span class="math inline">\(y_{di3}\)</span> denotam o número de desempregados, empregados e inativos amostrados, respectivamente.</li>
+<li><span class="math inline">\(m_{di} = y_{di1} + y_{di2} + y_{di3}\)</span> representa o tamanho da amostra.</li>
+<li><span class="math inline">\(p_{di1}, p_{di2}, p_{di3} = 1 − p_{di1} − p_{di2}\)</span> são as probabilidades respectivas de indivíduos desempregados, empregados e inativos.</li>
+</ul>
+</div>
+</section>
+<section id="variáveis-explicativas" class="slide level2">
+<h2>Variáveis explicativas</h2>
+<ul>
+<li>Log-proporção de REG.UNEMPLOYED.</li>
+<li>22 indicadores (dummy) para categorias de GOR, CLUSTER e SEXAGE, com a última categoria de cada uma como referência base.</li>
+<li>Matriz de incidência construída (<span class="math inline">\(X\)</span>):
+<ul>
+<li>Possui 24 colunas, incluindo um intercepto.</li>
+<li>Indexada por <span class="math inline">\(i = 1,…,6\)</span> para a categoria SEXAGE e <span class="math inline">\(d = 1,…,406\)</span> para AREA.</li>
+</ul></li>
+<li><span class="math inline">\(u_d\)</span> denota o efeito aleatório da área <span class="math inline">\(d\)</span>.</li>
+</ul>
+</section>
 <section id="diagnóstico-de-modelos-mistos" class="slide level2">
 <h2>Diagnóstico de modelos mistos</h2>
 <p>Diagnóstico</p>
