--- a/seminario/seminario.html
+++ b/seminario/seminario.html
@@ -337,6 +337,28 @@
 <h3 id="objetivo">Objetivo</h3>
 <p>Desenvolver uma nova metodologia para estimar características de desemprego ou emprego em áreas pequenas.</p>
 </section>
+<section id="motivação" class="slide level2">
+<h2>Motivação</h2>
+<ul>
+<li>O Eurostat exige dos países-membros informações estatísticas cada vez mais detalhadas sobre regiões geográficas menores;</li>
+<li>Por uma questão de custo, os estudos nacionais não são planejados para oferecer estimativas diretas precisas nesses pequenos domínios.</li>
+</ul>
+</section>
+<section id="motivação-1" class="slide level2">
+<h2>Motivação</h2>
+<ul>
+<li>Segundo o Serviço de Estatísticas Nacionais do Reino Unido, estimativas só são publicadas se tiverem um coeficiente de variação de até 20%;</li>
+<li>Para o ano de 2000, somente 75 das 406 estimativas diretas poderiam ser publicadas!</li>
+</ul>
+</section>
+<section id="motivação-2" class="slide level2">
+<h2>Motivação</h2>
+<ul>
+<li>Nesse artigo, os autores estudam métodos para obter estimativas mais precisas para os índices de desemprego, emprego e inatividade no Reino Unido;</li>
+<li>Intuitivamente, a ideia é aproximar as estimativas de distritos que sejam parecidos por meio de um modelo de regressão;</li>
+<li>As estimativas serão viesadas, porém suas variâncias pode ser substancialmente menor;</li>
+</ul>
+</section>
 <section id="variáveis" class="slide level2">
 <h2>Variáveis</h2>
 <div style="font-size: 60%;">
@@ -347,7 +369,7 @@
 </colgroup>
 <thead>
 <tr class="header">
-<th>Variable</th>
+<th>Variável</th>
 <th>Descrição</th>
 </tr>
 </thead>
@@ -397,12 +419,17 @@
 <p>Modelo logit multinomial com efeitos aleatórios de <em>área</em>.</p>
 <p><span class="math display">\[
 f(y_{di1}, y_{di2} \mid u_d) = \frac{m_{di}!}{y_{di1}! \cdot y_{di2}! \cdot y_{di3}!} \cdot p_{di1}^{y_{di1}} \cdot p_{di2}^{y_{di2}} \cdot p_{di3}^{y_{di3}}
+\]</span> <span class="math display">\[
+\log{(p_{dij}/p_{di3})} = x_{di}\beta_j + u_d, \qquad j=1,2 \qquad i = 1,\dots ,6 \qquad d = 1,\dots,406
+\]</span> <span class="math display">\[
+u_d \stackrel{iid}{\sim} N(0,\varphi)
 \]</span></p>
 <div style="font-size: 60%;">
 <ul>
-<li><span class="math inline">\(x_{di}\)</span>, <span class="math inline">\(y_{di1}\)</span>, <span class="math inline">\(y_{di2}\)</span> e <span class="math inline">\(y_{di3}\)</span> denotam o número de desempregados, empregados e inativos amostrados, respectivamente.</li>
+<li><span class="math inline">\(y_{di1}\)</span>, <span class="math inline">\(y_{di2}\)</span> e <span class="math inline">\(y_{di3}\)</span> denotam o número de desempregados, empregados e inativos amostrados, respectivamente.</li>
 <li><span class="math inline">\(m_{di} = y_{di1} + y_{di2} + y_{di3}\)</span> representa o tamanho da amostra.</li>
-<li><span class="math inline">\(p_{di1}, p_{di2}, p_{di3} = 1 − p_{di1} − p_{di2}\)</span> são as probabilidades respectivas de indivíduos desempregados, empregados e inativos.</li>
+<li><span class="math inline">\(p_{di1}, p_{di2}, p_{di3}\)</span> são as probabilidades respectivas de indivíduos desempregados, empregados e inativos. <span class="math inline">\(\left(\sum_j p_{dij} = 1\right)\)</span></li>
+<li><span class="math inline">\(x_{di}\)</span> são as variáveis explicativas</li>
 </ul>
 </div>
 </section>
@@ -419,15 +446,11 @@ f(y_{di1}, y_{di2} \mid u_d) = \frac{m_{di}!}{y_{di1}! \cdot y_{di2}! \cdot y_{d
 <li><span class="math inline">\(u_d\)</span> denota o efeito aleatório da área <span class="math inline">\(d\)</span>.</li>
 </ul>
 </section>
-<section id="diagnóstico-de-modelos-mistos" class="slide level2">
-<h2>Diagnóstico de modelos mistos</h2>
-<p>Diagnóstico</p>
+<section id="diagnóstico-do-modelo" class="slide level2">
+<h2>Diagnóstico do modelo</h2>
 </section>
-<section id="análise-de-resíduos" class="slide level2">
-<h2>Análise de resíduos</h2>
-</section>
-<section id="desafios" class="slide level2">
-<h2>Desafios</h2>
+<section id="simulação" class="slide level2">
+<h2>Simulação</h2>
 </section>
 <section id="conclusão" class="slide level2">
 <h2>Conclusão</h2>
