add plot simulacao

--- a/seminario/seminario.html
+++ b/seminario/seminario.html
@@ -451,7 +451,17 @@ u_d \stackrel{iid}{\sim} N(0,\varphi)
 </section>
 <section id="simulação" class="slide level2">
 <h2>Simulação</h2>
+<p>Experimento de simulação com dois objetivos principais:</p>
+<ul>
+<li>Comparação de taxas de desemprego estimadas pelo modelo misto logit multinomial com aquelas obtidas pelo modelo logit misto univariado para desempregados</li>
+<li>Comparação de desempenho de duas estimativas diferentes do erro quadrático médio propostas</li>
+</ul>
+<p>Os dados simulados (K = 1000 populações, D = 200 áreas) foram gerados utilizando os parâmetros ajustados para os dados reais.</p>
 </section>
+<section id="simulação-1" class="slide level2">
+<h2>Simulação</h2>
+
+<img data-src="img/mse.001.jpeg" class="r-stretch quarto-figure-center"><p class="caption">Valores empíricos do erro quadrático médio segundo os modelos multinomial e binomial</p></section>
 <section id="conclusão" class="slide level2">
 <h2>Conclusão</h2>
 <div class="footer footer-default">
