--- a/seminario/seminario.html
+++ b/seminario/seminario.html
@@ -416,15 +416,16 @@
 </section>
 <section id="modelo" class="slide level2">
 <h2>Modelo</h2>
+<div style="font-size: 60%;">
 <p>Modelo logit multinomial com efeitos aleatórios de <em>área</em>.</p>
+</div>
 <p><span class="math display">\[
 f(y_{di1}, y_{di2} \mid u_d) = \frac{m_{di}!}{y_{di1}! \cdot y_{di2}! \cdot y_{di3}!} \cdot p_{di1}^{y_{di1}} \cdot p_{di2}^{y_{di2}} \cdot p_{di3}^{y_{di3}}
 \]</span> <span class="math display">\[
-\log{(p_{dij}/p_{di3})} = x_{di}\beta_j + u_d, \qquad j=1,2 \qquad i = 1,\dots ,6 \qquad d = 1,\dots,406
-\]</span> <span class="math display">\[
-u_d \stackrel{iid}{\sim} N(0,\varphi)
+\log{(p_{dij}/p_{di3})} = x_{di}\beta_j + u_d,
 \]</span></p>
 <div style="font-size: 60%;">
+<p><span class="math inline">\(j=1,2 \qquad i = 1,\dots ,6 \qquad d = 1,\dots,406, u_d \stackrel{iid}{\sim} N(0,\varphi)\)</span></p>
 <ul>
 <li><span class="math inline">\(y_{di1}\)</span>, <span class="math inline">\(y_{di2}\)</span> e <span class="math inline">\(y_{di3}\)</span> denotam o número de desempregados, empregados e inativos amostrados, respectivamente.</li>
 <li><span class="math inline">\(m_{di} = y_{di1} + y_{di2} + y_{di3}\)</span> representa o tamanho da amostra.</li>
@@ -448,22 +449,92 @@ u_d \stackrel{iid}{\sim} N(0,\varphi)
 </section>
 <section id="diagnóstico-do-modelo" class="slide level2">
 <h2>Diagnóstico do modelo</h2>
+<div style="font-size: 60%;">
+<table>
+<thead>
+<tr class="header">
+<th>Modelo</th>
+<th>Log probabilidade</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Modelo linear (6)</td>
+<td>−3055,9</td>
+</tr>
+<tr class="even">
+<td>Modelo linear misto (5)</td>
+<td>−3050,2</td>
+</tr>
+</tbody>
+</table>
+</div>
 </section>
 <section id="simulação" class="slide level2">
 <h2>Simulação</h2>
 <p>Experimento de simulação com dois objetivos principais:</p>
 <ul>
-<li>Comparação de taxas de desemprego estimadas pelo modelo misto logit multinomial com aquelas obtidas pelo modelo logit misto univariado para desempregados</li>
+<li>Comparação de taxas de desemprego estimadas pelo modelo misto logit multinomial com as estimativas obtidas pelo modelo logit misto univariado para desempregados</li>
 <li>Comparação de desempenho de duas estimativas diferentes do erro quadrático médio propostas</li>
 </ul>
-<p>Os dados simulados (K = 1000 populações, D = 200 áreas) foram gerados utilizando os parâmetros ajustados para os dados reais.</p>
 </section>
 <section id="simulação-1" class="slide level2">
 <h2>Simulação</h2>
+<p>Comparação entre modelos</p>
+<ol type="1">
+<li>Modelo misto logit multinomial <span class="math display">\[
+\log\left(\frac{p_{dij}}{p_{di3}}\right) = x_{di}\boldsymbol{\beta}_j + u_d,
+\]</span></li>
+</ol>
+<div style="font-size: 60%;">
+<p><span class="math inline">\(j = 1, 2 \qquad i = 1, ..., 6 \qquad d = 1, ..., 406\)</span></p>
+</div>
+<ol start="2" type="1">
+<li>Modelo misto logit univariado para desempregados <span class="math display">\[
+\log\left\{\frac{p_{di1}}{1 - p_{di1}}\right\} = x_{di}\boldsymbol{\beta} + u_d.
+\]</span></li>
+</ol>
+</section>
+<section id="simulação-2" class="slide level2">
+<h2>Simulação</h2>
+<p>Os dados simulados (K = 1000 populações, D = 200 áreas) foram gerados utilizando os parâmetros ajustados para os dados reais.</p>
+</section>
+<section id="simulação-3" class="slide level2">
+<h2>Simulação</h2>
 
-<img data-src="img/mse.001.jpeg" class="r-stretch quarto-figure-center"><p class="caption">Valores empíricos do erro quadrático médio segundo os modelos multinomial e binomial</p></section>
+<img data-src="img/mse.001.jpeg" class="r-stretch quarto-figure-center"><p class="caption">Valores empíricos do erro quadrático médio segundo os modelos multinomial e binomial em escala logarítmica</p></section>
+<section id="simulação-4" class="slide level2">
+<h2>Simulação</h2>
+<ul>
+<li>O MSE do modelo multinomial é consideravelmente menor</li>
+<li>O modelo univariado não leva em conta a dependência entre o número de pessoas empregadas, desempregadas e inativas no processo de estimação.</li>
+</ul>
+</section>
 <section id="conclusão" class="slide level2">
 <h2>Conclusão</h2>
+<ul>
+<li>Foi proposto um modelo logit multinomial com efeitos aleatórios para modelar dados de emprego ou desemprego, e estimadores de pequenas áreas foram derivados a partir dele</li>
+<li>As estimativas obtidas são consistentes, pois estão dentro do espaço desejado, ou seja, a soma dos totais estimados de desempregados, empregados e inativos equivale ao total da população</li>
+<li>Em comparação com estimadores diretos, essas estimativas apresentam uma variância reduzida sem um viés significativo</li>
+</ul>
+</section>
+<section id="conclusão-1" class="slide level2">
+<h2>Conclusão</h2>
+<p>Duas formas distintas de estimar o erro quadrático médio dos estimadores de pequenas áreas propostos:</p>
+<h3 id="expressão-analítica">1. Expressão Analítica</h3>
+<ul>
+<li>Baseada em linearizações de Taylor específicas para o modelo e o parâmetro em questão</li>
+<li>Proporciona uma abordagem analítica para avaliar o erro médio quadrático</li>
+</ul>
+</section>
+<section id="conclusão-2" class="slide level2">
+<h2>Conclusão</h2>
+<h3 id="estimador-bootstrap">2. Estimador Bootstrap</h3>
+<ul>
+<li>Desenvolvido para o modelo logit multinomial, evitando linearizações</li>
+<li>Pode ser facilmente adaptado a variações no modelo e em diferentes parâmetros-alvo</li>
+<li>Demonstra melhor desempenho em comparação com o estimador analítico em simulações</li>
+</ul>
 <div class="footer footer-default">
 
 </div>
