--- a/seminario/seminario.html
+++ b/seminario/seminario.html
@@ -449,7 +449,14 @@ f(y_{di1}, y_{di2} \mid u_d) = \frac{m_{di}!}{y_{di1}! \cdot y_{di2}! \cdot y_{d
 </section>
 <section id="diagnóstico-do-modelo" class="slide level2">
 <h2>Diagnóstico do modelo</h2>
-<div style="font-size: 60%;">
+
+<img data-src="img/fig5.png" class="r-stretch quarto-figure-center"><p class="caption">Resíduos em relação aos valores previstos para os empregados</p></section>
+<section id="section" class="slide level2">
+<h2></h2>
+
+<img data-src="img/fig6.png" class="r-stretch quarto-figure-center"><p class="caption">Resíduos em relação aos valores previstos para os desempregados</p></section>
+<section id="section-1" class="slide level2">
+<h2></h2>
 <table>
 <thead>
 <tr class="header">
@@ -468,8 +475,11 @@ f(y_{di1}, y_{di2} \mid u_d) = \frac{m_{di}!}{y_{di1}! \cdot y_{di2}! \cdot y_{d
 </tr>
 </tbody>
 </table>
-</div>
 </section>
+<section id="estimativa-de-pequenas-áreas-das-características-do-emprego" class="slide level2">
+<h2>Estimativa de pequenas áreas das características do emprego</h2>
+
+<img data-src="img/fig8.png" class="r-stretch quarto-figure-center"><p class="caption">Razão entre os coeficientes de variação das estimativas diretas sobre as estimativas baseadas em modelos dos totais de (a) desempregados e (b) empregados para cada área</p></section>
 <section id="simulação" class="slide level2">
 <h2>Simulação</h2>
 <p>Experimento de simulação com dois objetivos principais:</p>
