arruma tabela model

--- a/seminario/seminario.html
+++ b/seminario/seminario.html
@@ -462,16 +462,19 @@ f(y_{di1}, y_{di2} \mid u_d) = \frac{m_{di}!}{y_{di1}! \cdot y_{di2}! \cdot y_{d
 <tr class="header">
 <th>Modelo</th>
 <th>Log probabilidade</th>
+<th>BIC</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td>Modelo linear (6)</td>
 <td>−3055,9</td>
+<td>6306,8</td>
 </tr>
 <tr class="even">
 <td>Modelo linear misto (5)</td>
 <td>−3050,2</td>
+<td>6303.1</td>
 </tr>
 </tbody>
 </table>
