--- a/seminario/seminario.html
+++ b/seminario/seminario.html
@@ -515,8 +515,8 @@ f(y_{di1}, y_{di2} \mid u_d) = \frac{m_{di}!}{y_{di1}! \cdot y_{di2}! \cdot y_{d
 <p>Outra alternativa para o cálculo do erro é a reamostragem.</p>
 <ul>
 <li>Jackknife (Jiang et al., 2002)</li>
-<li>Boostrap paramétrico e não paramétrico (Pfeffermann e Tiller, 2005)</li>
-<li>Bootsrap para EQM em populações finitas (González-Manteiga et al., 2007)</li>
+<li>Bootstrap paramétrico e não paramétrico (Pfeffermann e Tiller, 2005)</li>
+<li>Bootstrap para EQM em populações finitas (González-Manteiga et al., 2007)</li>
 </ul>
 </section>
 <section id="simulação" class="slide level2">
