fonte completa do artigo

--- a/seminario/seminario.html
+++ b/seminario/seminario.html
@@ -336,9 +336,10 @@ Pedro Tótolo, Renata Hirota, Thais Domingues
 </div>
 
 </section>
-<section id="introdução" class="slide level2">
-<h2>Introdução</h2>
-<p>Isabel Molina, Ayoub Saei, M. José Lombardía, Small Area Estimates of Labour Force Participation Under a Multinomial Logit Mixed Model. Journal of the Royal Statistical Society Series A: Statistics in Society, Volume 170, Issue 4, October 2007, Pages 975–1000<a href="https://doi.org/10.1111/j.1467-985X.2007.00493.x">https://doi.org/10.1111/j.1467-985X.2007.00493.x</a></p>
+<section id="artigo" class="slide level2">
+<h2>Artigo</h2>
+<p>Isabel Molina, Ayoub Saei, M. José Lombardía, Small Area Estimates of Labour Force Participation Under a Multinomial Logit Mixed Model. Journal of the Royal Statistical Society Series A: Statistics in Society, Volume 170, Issue 4, October 2007, Pages 975–1000</p>
+<p><a href="https://doi.org/10.1111/j.1467-985X.2007.00493.x">https://doi.org/10.1111/j.1467-985X.2007.00493.x</a></p>
 <h3 id="objetivo">Objetivo</h3>
 <p>Desenvolver uma nova metodologia para estimar características de desemprego ou emprego em áreas pequenas.</p>
 </section>
